Fixed footer padding and wrapping issues

--- a/src/sass/views/_smallView.scss
+++ b/src/sass/views/_smallView.scss
@@ -7,3 +7,8 @@
 /*
   @title: Small view (screen only)
  */
+#wb-info {
+	h3 {
+		white-space: no-wrap;
+	}
+}
